Refactor HTML structure and improve CSS formatting

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav class="navbar">
             <div class="logo">
                 <h1>Healthy Snacks</h1>
+                <h2>HL</h2>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Alcanza tus metas</a></li>
@@ -23,5 +24,19 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- carrusel -->
+        <section>
+
+        </section>
+    </main>
+    <!-- comentarios -->
+    <!-- <aside>
+        <section>
+            <article>
+                <h2>Marisol</h2>
+            </article>
+        </section>
+    </aside> -->
 </body>
 </html>
