--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <h1>Healthy Snacks</h1>
-          <h2>HL</h2>
+          <img class="logo-img" src="/src/imagenes/logoOrigin.jpg" alt="logo">
         </div>
         <ul class="nav-links">
           <li><a href="#home">Inicio</a></li>
           <li><a href="#planes">Planes</a></li>
-          <li><a href="#productos">Productos</a></li>
+          <li><a href="/src/productos/prod.html">Productos</a></li>
           <li><a href="#cotizacion">Cotización</a></li>
           <li><a href="#testimonios">Testimonios</a></li>
           <li><a href="#contacto">Contacto</a></li>
